[project]
name = "lake"
version = "0.1.0"
description = "Australian macro-financial data lake"
requires-python = ">=3.12"
dependencies = [
    "datalake",
    "httpx>=0.27.0",
    "pyarrow>=18.0.0",
    "fastmcp>=2.0.0",
    "pydantic-ai>=0.1.0",
    "feedparser>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lake"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
