load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//line:service.bzl", "line_service")

exports_files(["data/tracks.json"])

go_library(
    name = "linepb_lib",
    srcs = glob(["gen/linepb/*.go"]),
    importpath = "github.com/solanyn/mono/line/gen/linepb",
)

go_library(
    name = "storage_lib",
    srcs = glob(["internal/storage/*.go"]),
    importpath = "github.com/solanyn/mono/line/internal/storage",
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_credentials//:credentials",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_google_uuid//:uuid",
        "@com_github_parquet_go_parquet_go//:parquet-go",
        "@com_github_parquet_go_parquet_go//compress/snappy",
    ],
)

go_library(
    name = "telemetry_lib",
    srcs = glob(["internal/telemetry/*.go"], exclude = ["internal/telemetry/*_test.go"]),
    importpath = "github.com/solanyn/mono/line/internal/telemetry",
    deps = [
        ":storage_lib",
        "@org_golang_x_crypto//salsa20",
    ],
)

go_library(
    name = "kafka_lib",
    srcs = glob(["internal/kafka/*.go"]),
    importpath = "github.com/solanyn/mono/line/internal/kafka",
    deps = [
        "@com_github_twmb_franz_go//pkg/kgo",
    ],
)

go_library(
    name = "coach_lib",
    srcs = glob(["internal/coach/*.go"], exclude = ["internal/coach/*_test.go"]),
    importpath = "github.com/solanyn/mono/line/internal/coach",
    deps = [
        ":telemetry_lib",
        "@com_github_gorilla_websocket//:websocket",
    ],
)

go_library(
    name = "tracks_lib",
    srcs = glob(["internal/tracks/*.go"]),
    importpath = "github.com/solanyn/mono/line/internal/tracks",
)

go_test(
    name = "telemetry_test",
    srcs = glob(["internal/telemetry/*_test.go"]),
    embed = [":telemetry_lib"],
)

go_test(
    name = "coach_test",
    srcs = glob(["internal/coach/*_test.go"]),
    embed = [":coach_lib"],
)

go_library(
    name = "db_lib",
    srcs = glob(["internal/db/*.go"]),
    importpath = "github.com/solanyn/mono/line/internal/db",
    deps = [
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)

go_library(
    name = "data_lib",
    srcs = ["data/embed.go"],
    embedsrcs = [
        "data/tracks.json",
    ],
    importpath = "github.com/solanyn/mono/line/data",
    visibility = ["//visibility:public"],
)

go_library(
    name = "migrations_lib",
    srcs = ["migrations/embed.go"],
    embedsrcs = glob(["migrations/*.sql"]),
    importpath = "github.com/solanyn/mono/line/migrations",
)

go_binary(
    name = "simulator",
    srcs = ["cmd/simulator/main.go"],
    deps = [
        ":telemetry_lib",
        "@org_golang_x_crypto//salsa20",
    ],
)

go_test(
    name = "simulator_test",
    srcs = ["cmd/simulator/main_test.go", "cmd/simulator/main.go"],
    deps = [
        ":telemetry_lib",
        "@org_golang_x_crypto//salsa20",
    ],
)

go_test(
    name = "e2e_test",
    srcs = glob(["test/*_test.go"]),
    deps = [
        ":storage_lib",
        ":telemetry_lib",
        "@org_golang_x_crypto//salsa20",
    ],
    size = "small",
)

line_service(
    name = "migrate",
    srcs = ["cmd/migrate/main.go"],
    repository = "ghcr.io/solanyn/line-migrate",
    deps = [
        ":migrations_lib",
        "@com_github_jackc_pgx_v5//stdlib",
        "@com_github_pressly_goose_v3//:goose",
    ],
)

line_service(
    name = "capture",
    srcs = ["cmd/capture/main.go"],
    repository = "ghcr.io/solanyn/line-capture",
    deps = [
        ":kafka_lib",
        ":telemetry_lib",
    ],
)

line_service(
    name = "assembler",
    srcs = ["cmd/assembler/main.go"],
    repository = "ghcr.io/solanyn/line-assembler",
    deps = [
        ":data_lib",
        ":db_lib",
        ":kafka_lib",
        ":storage_lib",
        ":telemetry_lib",
        ":tracks_lib",
        "@com_github_google_uuid//:uuid",
        "@com_github_twmb_franz_go//pkg/kgo",
    ],
)

line_service(
    name = "api",
    srcs = ["cmd/api/main.go"],
    repository = "ghcr.io/solanyn/line-api",
    deps = [
        ":coach_lib",
        ":data_lib",
        ":db_lib",
        ":kafka_lib",
        ":linepb_lib",
        ":storage_lib",
        ":telemetry_lib",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_parquet_go_parquet_go//:parquet-go",
        "@com_github_sherclockholmes_webpush_go//:webpush-go",
        "@com_github_twmb_franz_go//pkg/kgo",
    ],
)

line_service(
    name = "refdata",
    srcs = ["cmd/refdata/main.go"],
    repository = "ghcr.io/solanyn/line-refdata",
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_credentials//:credentials",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_parquet_go_parquet_go//:parquet-go",
        "@com_github_parquet_go_parquet_go//compress/snappy",
    ],
)
