load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")

py_library(
    name = "macro_lib",
    srcs = glob(["src/macro/**/*.py"]),
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [
        "//libs/datalake",
        "@macro_pypi//httpx",
        "@macro_pypi//pyarrow",
        "@macro_pypi//fastmcp",
        "@macro_pypi//feedparser",
        "@macro_pypi//pydantic_ai",
    ],
)

py_binary(
    name = "ingest",
    srcs = ["src/macro/ingest/cli.py"],
    imports = ["src"],
    main = "src/macro/ingest/cli.py",
    visibility = ["//visibility:public"],
    deps = [":macro_lib"],
)

py_binary(
    name = "agent",
    srcs = ["src/macro/__main__.py"],
    imports = ["src"],
    main = "src/macro/__main__.py",
    visibility = ["//visibility:public"],
    deps = [":macro_lib"],
)
