load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@aspect_bazel_lib//lib:tar.bzl", "tar")

py_library(
    name = "macro_lib",
    srcs = glob(["src/macro/**/*.py"]),
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [
        "//libs/datalake",
        "@macro_pypi//httpx",
        "@macro_pypi//pyarrow",
        "@macro_pypi//fastmcp",
        "@macro_pypi//feedparser",
        "@macro_pypi//pydantic_ai",
    ],
)

py_binary(
    name = "ingest",
    srcs = ["src/macro/ingest/cli.py"],
    imports = ["src"],
    main = "src/macro/ingest/cli.py",
    visibility = ["//visibility:public"],
    deps = [":macro_lib"],
)

py_binary(
    name = "mcp_server",
    srcs = ["src/macro/mcp_server.py"],
    imports = ["src"],
    main = "src/macro/mcp_server.py",
    visibility = ["//visibility:public"],
    deps = [":macro_lib"],
)

py_binary(
    name = "agent",
    srcs = ["src/macro/__main__.py"],
    imports = ["src"],
    main = "src/macro/__main__.py",
    visibility = ["//visibility:public"],
    deps = [":macro_lib"],
)

py_test(
    name = "test_ingest",
    srcs = [
        "tests/conftest.py",
        "tests/test_ingest.py",
    ],
    data = glob(["tests/fixtures/**"]),
    deps = [
        ":macro_lib",
        "@macro_pypi//pytest",
    ],
    args = ["-v"],
)

py_test(
    name = "test_promote",
    srcs = [
        "tests/conftest.py",
        "tests/test_promote.py",
    ],
    data = glob(["tests/fixtures/**"]),
    deps = [
        ":macro_lib",
        "@macro_pypi//pytest",
    ],
    args = ["-v"],
)

py_test(
    name = "test_state",
    srcs = ["tests/test_state.py"],
    deps = [
        ":macro_lib",
        "@macro_pypi//pytest",
    ],
    args = ["-v"],
)

py_test(
    name = "test_domain",
    srcs = [
        "tests/conftest.py",
        "tests/test_domain.py",
    ],
    data = glob(["tests/fixtures/**"]),
    deps = [
        ":macro_lib",
        "@macro_pypi//pytest",
    ],
    args = ["-v"],
)

tar(
    name = "ingest_layer",
    srcs = [":ingest"],
)

tar(
    name = "mcp_server_layer",
    srcs = [":mcp_server"],
)

oci_image(
    name = "image",
    base = "@python_slim_linux_amd64",
    entrypoint = ["/ingest"],
    tars = [
        ":ingest_layer",
        ":mcp_server_layer",
    ],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["macro:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/solanyn/macro",
)
