load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "repair_lib",
    srcs = ["repair.go"],
    importpath = "github.com/solanyn/mono/repair",
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "cmd_lib",
    srcs = ["cmd/repair-grpc/main.go"],
    importpath = "github.com/solanyn/mono/repair/cmd/repair-grpc",
    deps = [
        ":repair_lib",
        "@com_github_envoyproxy_go_control_plane_envoy//service/ext_proc/v3:ext_proc",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//health:health",
        "@org_golang_google_grpc//health/grpc_health_v1:grpc_health_v1",
    ],
)

go_binary(
    name = "repair-grpc",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "repair-grpc_linux_amd64",
    embed = [":cmd_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "repair-grpc_linux_arm64",
    embed = [":cmd_lib"],
    goarch = "arm64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "layer",
    srcs = [":repair-grpc_linux_amd64"],
    strip_prefix = ".",
)

oci_image(
    name = "image",
    base = "@distroless_static",
    entrypoint = ["/repair-grpc_linux_amd64_/repair-grpc_linux_amd64"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/solanyn/mono/tree/main/repair",
        "org.opencontainers.image.title": "repair-grpc",
        "org.opencontainers.image.description": "ExtProc gRPC server that repairs tool_call/tool_call_id fields in OpenAI-compatible chat completion requests",
        "org.opencontainers.image.licenses": "MIT",
    },
    tars = [":layer"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["repair-grpc:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/solanyn/repair-grpc",
)
