[project]
name = "scrib-audio"
version = "0.1.0"
description = "ML audio pipeline for scrib — diarization, transcription, alignment"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "mlx-audio>=0.4.2",
    "senko>=0.1.0",
    "soundfile>=0.13.0",
    "numpy>=2.0.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrib_audio"]
