load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "config_lib",
    srcs = glob(["config/*.go"]),
    importpath = "github.com/solanyn/mono/scrib/config",
    deps = [
        "@com_github_pelletier_go_toml//:go-toml",
    ],
)

go_library(
    name = "audio_lib",
    srcs = glob(["audio/*.go", "audio/*.m", "audio/*.h"]),
    cgo = True,
    clinkopts = [
        "-framework ScreenCaptureKit",
        "-framework CoreMedia",
        "-framework CoreAudio",
        "-framework AudioToolbox",
        "-framework Foundation",
        "-framework AVFoundation",
    ],
    copts = ["-x objective-c"],
    importpath = "github.com/solanyn/mono/scrib/audio",
    target_compatible_with = ["@platforms//os:macos"],
)

go_library(
    name = "client_lib",
    srcs = glob(["client/*.go"]),
    importpath = "github.com/solanyn/mono/scrib/client",
)

go_library(
    name = "store_lib",
    srcs = glob(["store/*.go"]),
    importpath = "github.com/solanyn/mono/scrib/store",
    deps = [
        "@org_modernc_sqlite//:sqlite",
    ],
)

go_library(
    name = "tui_lib",
    srcs = glob(["tui/*.go"]),
    importpath = "github.com/solanyn/mono/scrib/tui",
    deps = [
        ":audio_lib",
        ":client_lib",
        ":store_lib",
        "@com_github_charmbracelet_bubbles//spinner",
        "@com_github_charmbracelet_bubbles//viewport",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
    ],
)

go_library(
    name = "sync_lib",
    srcs = glob(["sync/*.go"]),
    importpath = "github.com/solanyn/mono/scrib/sync",
    deps = [
        ":store_lib",
    ],
)

go_library(
    name = "server_lib",
    srcs = glob(["server/*.go"]),
    importpath = "github.com/solanyn/mono/scrib/server",
    deps = [
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_chi_v5//middleware",
        "@com_github_lib_pq//:pq",
        "@com_github_minio_minio_go_v7//:minio-go",
        "@com_github_minio_minio_go_v7//pkg/credentials",
    ],
)

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "github.com/solanyn/mono/scrib",
    deps = [
        ":audio_lib",
        ":client_lib",
        ":config_lib",
        ":store_lib",
        ":sync_lib",
        ":tui_lib",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "scrib",
    embed = [":lib"],
    target_compatible_with = ["@platforms//os:macos"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_cmd_lib",
    srcs = ["cmd/scrib-server/main.go"],
    importpath = "github.com/solanyn/mono/scrib/cmd/scrib-server",
    deps = [
        ":server_lib",
    ],
)

go_binary(
    name = "scrib-server",
    embed = [":server_cmd_lib"],
    visibility = ["//visibility:public"],
)
